tests/whiley/valid/test_724.wyal
type nat is (int x)
where:
    x >= 0


define f_requires_0(nat x) is:
    x > 0


define g_requires_0(int p) is:
    p >= 0


assert "precondition not satisfied":
    forall(nat x, int p):
        if:
            g_requires_0(p)
        then:
            f_requires_0(x + 1)


